Update angular and package config

--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,7 @@
           "defaultConfiguration": "production"
         }
       },
-      "prefix": "uigeo",
+      "prefix": "geo",
       "projectType": "library",
       "root": "projects/uigeo",
       "schematics": {
