--- a/package.json
+++ b/package.json
@@ -13,23 +13,16 @@
     "@angular/build": "^20.3.9",
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "barrelize": "^1.6.6",
     "ng-packagr": "^20.3.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "name": "uigeo-workspace",
   "scripts": {
-    "build": "ng build",
-    "ng": "ng",
+    "build": "barrelize && ng build uigeo",
     "start": "ng serve",
-    "test": "ng test",
-    "watch": "ng build --watch --configuration development"
+    "watch": "barrelize && ng build uigeo --watch --configuration development"
   },
   "version": "0.0.0"
 }
